<resources>
    <string name="app_name">Galaxy News</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="latest_news">Latest News</string>
    <string name="news">News</string>
    <string name="welcome_in_the_show">Welcome in the show</string>
    <string name="_2_hours_ago">2 Hours ago</string>
    <string name="description_n_description_description_n_description_description">description \n description description \n description description</string>
    <string name="_951">951</string>
    <string name="no_available_data">No Available Data At Now</string>
    <string name="try_again">Try Again</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="type">type...</string>
    <string name="sorry_not_founded">Sorry!, Not Founded</string>
    <string name="no_highlight_news_for_egypt">No Highlight News For Egypt</string>
</resources>