<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:background="@color/cerulean_blue_15"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cerulean_blue_15"
            tools:context=".ui.fragments.details.DetailsFragment">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_250sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageDetails"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_launcher_background"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearance="@style/RadiusImageView_1" />

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:src="@drawable/ic_back"
                    app:layout_constraintStart_toStartOf="@+id/imageDetails"
                    app:layout_constraintTop_toTopOf="@+id/imageDetails"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/iv_bookMark"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:paddingHorizontal="@dimen/_4sdp"
                    android:src="@drawable/ic_bookmark_white"
                    app:layout_constraintEnd_toEndOf="@+id/imageDetails"
                    app:layout_constraintTop_toTopOf="@+id/imageDetails"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/iv_share"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_24sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:paddingHorizontal="@dimen/_4sdp"
                    android:src="@drawable/ic_share"
                    app:layout_constraintEnd_toStartOf="@+id/iv_bookMark"
                    app:layout_constraintTop_toTopOf="@+id/imageDetails"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_12sdp"
                    android:text="@string/_2_hours_ago"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/imageDetails" />

                <TextView
                    android:id="@+id/tv_seenNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_12sdp"
                    android:drawablePadding="@dimen/_4sdp"
                    android:text="@string/_951"
                    android:textColor="@color/white"
                    app:drawableStartCompat="@drawable/ic_eye"
                    app:layout_constraintBottom_toBottomOf="@+id/imageDetails"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:id="@+id/tv_commentsNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_12sdp"
                    android:drawablePadding="@dimen/_4sdp"
                    android:text="@string/_951"
                    android:textColor="@color/white"
                    app:drawableStartCompat="@drawable/ic_comment"
                    app:layout_constraintBottom_toBottomOf="@+id/imageDetails"
                    app:layout_constraintEnd_toStartOf="@+id/tv_seenNumber" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/view"
                android:layout_width="@dimen/_4sdp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_16sdp"
                android:background="@color/yellow"
                app:layout_constraintBottom_toBottomOf="@+id/tv_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_title" />

            <TextView
                android:id="@+id/tv_title"
                style="@style/CustomTextViewThemeSemiBold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_32sdp"
                android:text="@string/latest_news"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

            <TextView
                android:id="@+id/tv_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:text="@string/description_n_description_description_n_description_description"
                android:textColor="@color/bottom_nav_gray"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>